refactor component nav

--- a/dev/scss/components/_nav.scss
+++ b/dev/scss/components/_nav.scss
@@ -1,7 +1,7 @@
 // ===========================================================================
 // #Nav
 // ===========================================================================
-.main-nav {
+.c-nav {
   position: absolute;
   top: 0;
   left: 0;
@@ -12,7 +12,7 @@
     text-align: center;
   }
 }
-.main-nav__toggle {
+.c-nav__toggle {
   display: none;
   float: right;
   width: 7em;
@@ -46,7 +46,7 @@
     display: none !important;
   }
 }
-.main-nav__toggle-link {
+.c-nav__toggle-link {
   position: absolute;
   right: 7px;
   top: 1em;
@@ -61,14 +61,14 @@
     display: none;
   }
 }
-  .toggle--close {
-    background-color: $accent-color;
-  }
-.main-nav:not(:target) .toggle--open,
-.main-nav:target .toggle--close {
+.toggle--close {
+  background-color: $accent-color;
+}
+.c-nav:not(:target) .toggle--open,
+.c-nav:target .toggle--close {
   display: block;
 }
-.main-nav__items {
+.c-nav__items {
   background-color: $accent-color;
   display: none;
   height: auto;
@@ -78,67 +78,67 @@
     display: block;
   }
 }
-  .main-nav:target .main-nav__items {
-    display: block;
-    width: 100%;
+.c-nav:target .c-nav__items {
+  display: block;
+  width: 100%;
+}
+.c-nav__item {
+  &:not(:last-child) {
+    border-bottom: 1px solid scale-color($accent-color, $lightness: +25%);
   }
-  .main-nav__item {
+  display: block;
+  margin: 0;
+  @include media-query($min, $siteWidth) {
+    display: inline-block;
     &:not(:last-child) {
-      border-bottom: 1px solid scale-color($accent-color, $lightness: +25%);
-    }
-    display: block;
-    margin: 0;
-    @include media-query($min, $siteWidth) {
-      display: inline-block;
-      &:not(:last-child) {
-        border-bottom: none;
-      }
+      border-bottom: none;
     }
   }
-  .main-nav__item--current {
+}
+.c-nav__item--current {
+  background-color: scale-color($accent-color, $lightness: -15%);
+}
+.c-nav__link {
+  color: #fff;
+  display: block;
+  height: auto;
+  padding: 0.75em 1em;
+  font-size: 1.3em;
+  font-weight: 700;
+  text-decoration: none;
+  &:hover, &:focus {
     background-color: scale-color($accent-color, $lightness: -15%);
   }
-    .main-nav__link {
-      color: #fff;
-      display: block;
-      height: auto;
-      padding: 0.75em 1em;
-      font-size: 1.3em;
-      font-weight: 700;
-      text-decoration: none;
-      &:hover, &:focus {
-        background-color: scale-color($accent-color, $lightness: -15%);
-      }
-      &:active {
-        background-color: scale-color($accent-color, $lightness: -30%);
-      }
-      @include media-query($min, $small) {
-        font-size: 1em;
-      }
-      @include media-query($min, $siteWidth) {
-        display: inline-block;
-      }
-    }
-
-  .has-sub-nav {
-    span:after {
-      width: 0;
-      height: 0;
-      border: 0.313em solid transparent;
-      border-bottom: none;
-      border-top-color: scale-color($accent-color, $lightness: +50%);
-      content: '';
-      vertical-align: middle;
-      display: inline-block;
-      position: relative;
-      right: -0.313em;
-    }
-    &:hover > .main-sub-nav__items {
-      display: block;
-    }
+  &:active {
+    background-color: scale-color($accent-color, $lightness: -30%);
   }
+  @include media-query($min, $small) {
+    font-size: 1em;
+  }
+  @include media-query($min, $siteWidth) {
+    display: inline-block;
+  }
+}
 
-.main-sub-nav__items {
+.has-sub-nav {
+  span:after {
+    width: 0;
+    height: 0;
+    border: 0.313em solid transparent;
+    border-bottom: none;
+    border-top-color: scale-color($accent-color, $lightness: +50%);
+    content: '';
+    vertical-align: middle;
+    display: inline-block;
+    position: relative;
+    right: -0.313em;
+  }
+  &:hover > .main-sub-nav__items {
+    display: block;
+  }
+}
+
+.c-nav__sub-items {
   background-color: scale-color($accent-color, $lightness: -10%);
   display: none;
   margin-bottom: 0;
@@ -146,38 +146,38 @@
     position: absolute;
   }
 }
-  .main-sub-nav__item {
-    display: block;
-    margin: 0;
-    &:not(:last-child) {
-      border-bottom: 1px solid scale-color($accent-color, $lightness: +5%);
-    }
-    @include media-query($min, $siteWidth) {
-      display: block;
-      text-align: left;
-    }
+.c-nav__sub-item {
+  display: block;
+  margin: 0;
+  &:not(:last-child) {
+    border-bottom: 1px solid scale-color($accent-color, $lightness: +5%);
   }
-  .main-sub-nav__item--current {
+  @include media-query($min, $siteWidth) {
+    display: block;
+    text-align: left;
+  }
+}
+.c-nav__sub-item--current {
+  background-color: scale-color($accent-color, $lightness: -15%);
+}
+.c-nav__sub-link {
+  color: #fff;
+  display: block;
+  height: auto;
+  padding: 0.75em 1em;
+  font-size: 1.3em;
+  font-weight: 700;
+  text-decoration: none;
+  &:hover, &:focus {
     background-color: scale-color($accent-color, $lightness: -15%);
   }
-    .main-sub-nav__link {
-      color: #fff;
-      display: block;
-      height: auto;
-      padding: 0.75em 1em;
-      font-size: 1.3em;
-      font-weight: 700;
-      text-decoration: none;
-      &:hover, &:focus {
-        background-color: scale-color($accent-color, $lightness: -15%);
-      }
-      &:active {
-        background-color: scale-color($accent-color, $lightness: -30%);
-      }
-      font-weight: 400;
-      padding-left: 1.5em;
-      @include media-query($min, $siteWidth) {
-        display: block;
-        padding-left: 1em;
-      }
-    }
+  &:active {
+    background-color: scale-color($accent-color, $lightness: -30%);
+  }
+  font-weight: 400;
+  padding-left: 1.5em;
+  @include media-query($min, $siteWidth) {
+    display: block;
+    padding-left: 1em;
+  }
+}
