--- a/layouts/theme.liquid
+++ b/layouts/theme.liquid
@@ -23,7 +23,7 @@
       <header class="c-header">
         {% include 'header' %}
       </header>
-      <nav id="nav" class="main-nav" role="navigation">
+      <nav id="nav" class="c-nav" role="navigation">
         {% include 'nav' %}
       </nav>
       <main class="main-content" role="main">
