refactor booking styles

--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -1,6 +1,6 @@
 <div class="o-wrapper">
 
-  <div class="reserve-module">
+  <div class="c-booking">
     <h3>Reservation :</h3>
     <iframe src='https://ib.guestonline.fr/instabook/bookings/DThKf1O' width='320px' height='450px' frameborder='0' allowTransparency='true' scrolling='yes' ></iframe>
   </div>
