--- a/layouts/theme.liquid
+++ b/layouts/theme.liquid
@@ -26,7 +26,7 @@
       <nav id="nav" class="c-nav" role="navigation">
         {% include 'nav' %}
       </nav>
-      <main class="main-content" role="main">
+      <main role="main">
         {{ content_for_layout }}
       </main>
       <footer class="main-footer" role="contentinfo">
