--- a/layouts/theme.liquid
+++ b/layouts/theme.liquid
@@ -29,7 +29,7 @@
       <main role="main">
         {{ content_for_layout }}
       </main>
-      <footer class="main-footer" role="contentinfo">
+      <footer class="c-footer" role="contentinfo">
         {% include 'footer' %}
       </footer>
     </section>
