move forms from component to object

--- a/dev/scss/objects/_forms.scss
+++ b/dev/scss/objects/_forms.scss
@@ -1,31 +1,34 @@
 // ===========================================================================
 // #Form
 // ===========================================================================
+.o-form {
+}
+
 .field-group {
   margin-bottom: .5em;
 }
-  .field-group__legend {
-    font-size: 1.5em;
-    font-weight: 700;
-    margin-bottom: .5em;
-  }
+.field-group__legend {
+  font-size: 1.5em;
+  font-weight: 700;
+  margin-bottom: .5em;
+}
 
 .input,
 .select,
 .textarea {
   margin: 0 0 .5em 0;
 }
-  .input-hint {
-    padding: .15em .4em;
-  }
-  .input-hint--info {
-    background: #68708A;
-    color: #fff;
-  }
-  .input-hint--error {
-    background: #DF5900;
-    color: #fff;
-  }
+.input-hint {
+  padding: .15em .4em;
+}
+.input-hint--info {
+  background: #68708A;
+  color: #fff;
+}
+.input-hint--error {
+  background: #DF5900;
+  color: #fff;
+}
 
 .submit {
   text-align: center;
@@ -36,11 +39,11 @@
   margin-bottom: 1em;
   padding: .5em 1em;
 }
-  .message__description {
-    p {
-      margin-bottom: 0;
-    }
+.message__description {
+  p {
+    margin-bottom: 0;
   }
+}
 .message--success {
   background-color: #4E6F25;
   color: #fff;
