--- a/snippets/footer.liquid
+++ b/snippets/footer.liquid
@@ -21,6 +21,7 @@
           </div>
           <div class="submit c-footer__submit">
             <button class="button c-footer__button" type="submit">
+            <button class="o-button o-button--red c-footer__button" type="submit">
               <i class="icon icon-check"></i> {{ "Valider" | t }}
             </button>
           </div>
