--- a/templates/404.liquid
+++ b/templates/404.liquid
@@ -14,7 +14,7 @@
     </div>
     <footer class="section__footer">
       <p>
-        <a class="button" href="{{ restaurant.root_path }}">
+        <a class="o-button o-button--red" href="{{ restaurant.root_path }}">
           {{ "Retour à l'accueil" | t }}
         </a>
       </p>
