--- a/templates/contacts/form.liquid
+++ b/templates/contacts/form.liquid
@@ -94,7 +94,7 @@
           <textarea id="contactBody" name="message[body]"></textarea>
         </div>
         <div class="submit">
-          <input class="button" type="submit" value="{{ "Envoyer" | t }}">
+          <input class="o-button o-button--red" type="submit" value="{{ "Envoyer" | t }}">
         </div>
       </fieldset>
     {% endcontact_form %}
