--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -32,7 +32,7 @@
       </div>
       <footer class="section__footer menus__footer">
         <p>
-          <a class="button" href="{{ restaurant.menus_path }}">
+          <a class="o-button o-button--red" href="{{ restaurant.menus_path }}">
             {{ "Voir toute la carte" | t }}
           </a>
         </p>
@@ -54,7 +54,7 @@
       </div>
       <footer class="section__footer foods__footer">
         <p>
-          <a class="button" href="{{ restaurant.menus_path }}">
+          <a class="o-button o-button--red" href="{{ restaurant.menus_path }}">
             {{ "Voir toute la carte" | t }}
           </a>
         </p>
@@ -157,7 +157,7 @@
     </div>
     <footer class="section__footer directions__footer">
       <p>
-        <a class="button" href="{% google_map_url %}">
+        <a class="o-button o-button--red" href="{% google_map_url %}">
           {{ "Voir l'itinéraire" | t }}
         </a>
       </p>
