--- a/templates/newsletter/form.liquid
+++ b/templates/newsletter/form.liquid
@@ -34,7 +34,7 @@
           {% endunless %}
         </div>
         <div class="submit">
-          <input class="button" type="submit" value="{{ "Valider" | t }}">
+          <input class="o-button o-button--red" type="submit" value="{{ "Valider" | t }}">
         </div>
       </fieldset>
     </div>
