--- a/templates/menus.liquid
+++ b/templates/menus.liquid
@@ -32,7 +32,7 @@
       </div>
       <footer class="section__main menus__footer">
         <p>
-          <a class="button" href="{{ menu.url }}">{{ "Voir les plats" | t }}</a>
+          <a class="o-button o-button--red" href="{{ menu.url }}">{{ "Voir les plats" | t }}</a>
         </p>
       </footer>
       <hr class="menus__separator">
