--- a/templates/restaurant.liquid
+++ b/templates/restaurant.liquid
@@ -33,7 +33,7 @@
       {% if theme_settings.display_google_business_view_url %}
       <footer class="section__footer">
         <p>
-          <a class="button business__link" href="{% google_business_view_url %}">
+          <a class="o-button o-button--red business__link" href="{% google_business_view_url %}">
             {{ "Visiter" | t }}
           </a>
         </p>
