--- a/dev/scss/base/_typography.scss
+++ b/dev/scss/base/_typography.scss
@@ -6,17 +6,17 @@ input,
 textarea,
 button,
 select {
-  font-size: 87.5%; // Henseforth known as 1em (assumed at 14px)
+  font-size: 14px;
   line-height: 1.6;
   font-family: $bodyFontStack;
   font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -webkit-text-size-adjust: 100%;
   @include media-query($min, $small) {
-    font-size: 112.5%;
+    font-size: 16px;
   }
   @include media-query($min, $medium) {
-    font-size: 125%;
+    font-size: 18px;
   }
 }
 
