--- a/templates/newsletter/form.liquid
+++ b/templates/newsletter/form.liquid
@@ -1,13 +1,4 @@
 {% newsletter_subscribe_form %}
-  <section class="page-header page-header--newsletter">
-    <div class="o-wrapper">
-      <header class="section__header page-header__header">
-        <h1 class="section__title page-header__title">{{ "Inscription à la newsletter" | t }}</h1>
-      </header>
-      <div class="section__main page-header__description">
-        {% if form.created_successfully? %}
-          <p>{{ "Abonnez-vous à notre newsletter pour recevoir les dernières nouveautés du restaurant." | t }}</p>
-        {% else %}
           <div class="message message--error">
             <div class="message__description">
               <p>
@@ -16,27 +7,28 @@
               </p>
             </div>
           </div>
-        {% endif %}
-      </div>
-    </div>
-  </section>
 
-  <section class="newsletter-form">
-    <div class="o-wrapper">
-      <fieldset class="field-group">
-        <div class="input">
-          <label for="subscriberEmail">{{ "Votre adresse email :" | t }}</label>
+  <div class="o-wrapper">
+    <section class="o-form c-newsletter-form">
+      <h1 class="o-form__title">{{ "Inscription à la newsletter" | t }}</h1>
+      {% unless form.created_successfully? %}
+      {% endunless %}
+      <fieldset class="o-form__field-group">
+        <div class="o-form__input">
+          <label class="o-form__label" for="subscriberEmail">{{ "Abonnez-vous à notre newsletter pour recevoir les dernières nouveautés du restaurant&nbsp;:" | t }}</label>
           <input id="subscriberEmail" name="subscriber[email]" type="text">
           {% unless form.created_successfully? %}
-            <div class="input-hint input-hint--error">
+            <div class="o-form__input-hint o-form__input-hint--error">
               {{ form.error }}
             </div>
           {% endunless %}
         </div>
-        <div class="submit">
-          <input class="o-button o-button--red" type="submit" value="{{ "Valider" | t }}">
+        <div class="o-form__submit">
+          <button class="o-button o-button--red has-icon" type="submit">
+            <i class="icon icon-check"></i> {{ "Valider" | t }}
+          </button>
         </div>
       </fieldset>
-    </div>
-  </section>
+    </section>
+  </div>
 {% endnewsletter_subscribe_form %}
