--- a/config/settings.html.liquid
+++ b/config/settings.html.liquid
@@ -48,6 +48,36 @@
           </div>
         </div>
       </fieldset>
+      <fieldset>
+        <legend>Messages</legend>
+        <div class="row">
+          <div class="columns medium-4 large-3">
+            <label for="color-message-success-background">Fond message succès</label>
+            <input name="admin_theme_settings[color-message-success-background]" id="color-message-success-background" value="{{ theme_settings.color-message-success-background }}" type="text" class="minicolors">
+          </div>
+          <div class="columns medium-4 large-3">
+            <label for="color-message-success-text">Texte message succès</label>
+            <input name="admin_theme_settings[color-message-success-text]" id="color-message-success-text" value="{{ theme_settings.color-message-success-text }}" type="text" class="minicolors">
+          </div>
+          <div class="columns medium-4 large-3">
+            <label for="color-message-notice-background">Fond message notice</label>
+            <input name="admin_theme_settings[color-message-notice-background]" id="color-message-notice-background" value="{{ theme_settings.color-message-notice-background }}" type="text" class="minicolors">
+          </div>
+          <div class="columns medium-4 large-3">
+            <label for="color-message-notice-text">Texte message notice</label>
+            <input name="admin_theme_settings[color-message-notice-text]" id="color-message-notice-text" value="{{ theme_settings.color-message-notice-text }}" type="text" class="minicolors">
+          </div>
+          <div class="columns medium-4 large-3">
+            <label for="color-message-error-background">Fond message erreur</label>
+            <input name="admin_theme_settings[color-message-error-background]" id="color-message-error-background" value="{{ theme_settings.color-message-error-background }}" type="text" class="minicolors">
+          </div>
+          <div class="columns medium-4 large-3 end">
+            <label for="color-message-error-text">Texte message erreur</label>
+            <input name="admin_theme_settings[color-message-error-text]" id="color-message-error-text" value="{{ theme_settings.color-message-error-text }}" type="text" class="minicolors">
+          </div>
+        </div>
+      </fieldset>
+      <fieldset>
         <legend>Etiquettes</legend>
         <div class="row">
           {% for tag in tags %}
