refactor contact-form component

--- a/dev/scss/components/_footer.scss
+++ b/dev/scss/components/_footer.scss
@@ -2,6 +2,7 @@
 // #Footer
 // =============================================================
 .c-footer {
+  margin-top: 1em;
   background-color: scale-color($body-color, $lightness: +95%);
   border-top: 1px solid scale-color($body-color, $lightness: +85%);
 }
