--- a/templates/contacts/form.liquid
+++ b/templates/contacts/form.liquid
@@ -65,36 +65,33 @@
     </div>
   </aside>
 
-  <section class="page-header page-header--contact">
-    <header class="section__header page-header__header">
-      <h1 class="section__title page-header__title">{{ contact_settings.contact_title }}</h1>
-    </header>
-    <div class="section__main page-header__description">
+  <section class="o-form c-contact-form">
+    <h1 class="o-form__title">{{ contact_settings.contact_title }}</h1>
+    <div class="o-form__description">
       {{ contact_settings.contact_content }}
     </div>
-  </section>
-
-  <section class="page-body page-body--contact">
     {% contact_form %}
-      <fieldset class="field-group">
-        <div class="input">
-          <label for="contactFromName">{{ "Votre nom :" | t }}</label>
+      <fieldset class="o-form__field-group">
+        <div class="o-form__input">
+          <label class="o-form__label" for="contactFromName">{{ "Votre nom :" | t }}</label>
           <input id="contactFromName" name="message[from_name]" type="text">
         </div>
-        <div class="input">
-          <label for="contactFromEmail">{{ "Votre adresse email :" | t }}</label>
+        <div class="o-form__input">
+          <label class="o-form__label" for="contactFromEmail">{{ "Votre adresse email :" | t }}</label>
           <input id="contactFromEmail" name="message[from_email]" type="text">
         </div>
-        <div class="input">
-          <label for="contactPhone">{{ "Votre numéro de téléphone :" | t }}</label>
+        <div class="o-form__input">
+          <label class="o-form__label" for="contactPhone">{{ "Votre numéro de téléphone :" | t }}</label>
           <input id="contactPhone" name="message[phone]" type="text">
         </div>
-        <div class="textarea">
-          <label for="contactBody">{{ "Votre message :" | t }}</label>
+        <div class="o-form__textarea">
+          <label class="o-form__label" for="contactBody">{{ "Votre message :" | t }}</label>
           <textarea id="contactBody" name="message[body]"></textarea>
         </div>
-        <div class="submit">
-          <input class="o-button o-button--red" type="submit" value="{{ "Envoyer" | t }}">
+        <div class="o-form__submit">
+          <button class="o-button o-button--red" type="submit">
+            {{ "Valider" | t }}
+          </button>
         </div>
       </fieldset>
     {% endcontact_form %}
