refactor thanks-form component

--- a/dev/scss/objects/_forms.scss
+++ b/dev/scss/objects/_forms.scss
@@ -7,6 +7,7 @@ $color__input-hint-error-text: {{ theme_settings.color-input-hint-error-text }};
 }
 .o-form__title {
   font-size: 2em;
+  margin-bottom: .25em;
 }
 .o-form__description {
   margin-bottom: 1em;
