--- a/templates/newsletter/thanks.liquid
+++ b/templates/newsletter/thanks.liquid
@@ -1,17 +1,11 @@
-<section class="page-header page-header--newsletter">
-  <div class="o-wrapper">
-    <header class="section__header page-header__header">
-      <h1 class="section__title page-header__title">{{ "Inscription enregistrée" | t }}</h1>
-    </header>
-    <div class="section__main page-header__description">
-      <div class="message message--success">
-        <div class="message__description">
-          <p>
-            <i class="icon icon-check"></i>
-            {{ "Votre inscription à notre newsletter a bien été enregistrée." | t }}
-          </p>
-        </div>
-      </div>
+<div class="o-wrapper">
+  <section class="c-thanks-form">
+    <h1 class="c-thanks-form__title">{{ "Inscription enregistrée" | t }}</h1>
+    <div class="c-message c-message--success">
+      <p class="c-message__description">
+        <i class="icon icon-check"></i>
+        {{ "Votre inscription à notre newsletter a bien été enregistrée." | t }}
+      </p>
     </div>
-  </div>
-</section>
+  </section>
+</div>
