--- a/templates/contacts/thanks.liquid
+++ b/templates/contacts/thanks.liquid
@@ -1,15 +1,10 @@
-<section class="page-header page-header--contact">
-  <div class="o-wrapper">
-    <header class="section__header page-header__header">
-      <h1 class="section__title page-header__title">{{ contact_settings.thanks_title }}</h1>
-    </header>
-    <div class="section__main page-header__description">
-      <div class="message message--success">
-        <div class="message__description">
-          {{ contact_settings.thanks_content }}
-        </div>
-      </div>
+<div class="o-wrapper">
+  <section class="c-thanks-form">
+    <h1 class="c-thanks-form__title">{{ contact_settings.thanks_title }}</h1>
+    <div class="c-message c-message--success">
+      <p class="c-message__description">
+        {{ contact_settings.thanks_content }}
+      </p>
     </div>
-  </div>
-</section>
-
+  </section>
+</div>
