--- a/templates/contacts/form.liquid
+++ b/templates/contacts/form.liquid
@@ -1,67 +1,58 @@
 <div class="o-wrapper">
-  <aside class="aside aside--contact" itemscope itemtype="http://schema.org/Restaurant">
-    <div class="contact-item">
-      <h3 class="contact-item__name" itemprop="name">{{ restaurant.name }}</h3>
+  <aside class="c-aside-info" itemscope itemtype="http://schema.org/Restaurant">
+    <div class="c-aside-info__item">
+      <h3 class="c-aside-info__name" itemprop="name">{{ restaurant.name }}</h3>
     </div>
     {% if restaurant.phone? %}
-    <div class="contact-item">
-      <p>
-        <span class="contact-item__label">{{ "Téléphone :" | t }}</span>
-        <br>
-        <a href="tel:{{ restaurant.phone_uri }}">
-          <span itemprop="telephone">{{ restaurant.phone }}</span>
-        </a>
-      </p>
+    <div class="c-aside-info__item">
+      <p class="c-aside-info__label">{{ "Téléphone :" | t }}</p>
+      <a class="c-aside-info__link" href="tel:{{ restaurant.phone_uri }}">
+        <span itemprop="telephone">{{ restaurant.phone }}</span>
+      </a>
     </div>
     {% endif %}
     {% if restaurant.email? %}
-    <div class="contact-item">
-      <p>
-        <span class="contact-item__label">{{ "Adresse email :" | t }}</span>
-        <br>
-        <a href="mailto:{{ restaurant.email }}">
-          <span itemprop="email">{{ restaurant.email }}</span>
-        </a>
-      </p>
+    <div class="c-aside-info__item">
+      <p class="c-aside-info__label">{{ "Adresse email :" | t }}</p>
+      <a class="c-aside-info__link" href="mailto:{{ restaurant.email }}">
+        <span itemprop="email">{{ restaurant.email }}</span>
+      </a>
     </div>
     {% endif %}
-    <div class="contact-item">
-      <p itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-        <span class="contact-item__label">{{ "Adresse :" | t }}</span>
+    <div class="c-aside-info__item" itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
+      <p class="c-aside-info__label">{{ "Adresse :" | t }}</p>
+      {% if restaurant.street_address? %}
+        <span itemprop="streetAddress">{{ restaurant.street_address }}</span>
         <br>
-        {% if restaurant.street_address? %}
-          <span itemprop="streetAddress">{{ restaurant.street_address }}</span>
-          <br>
-        {% endif %}
-        {% if restaurant.zip_code? %}
-          <span itemprop="postalCode">{{ restaurant.zip_code }}</span>
-        {% endif %}
-        {% if restaurant.city? %}
-          <span itemprop="addressLocality">{{ restaurant.city }}</span>
-        {% endif %}
-      </p>
+      {% endif %}
+      {% if restaurant.zip_code? %}
+        <span itemprop="postalCode">{{ restaurant.zip_code }}</span>
+      {% endif %}
+      {% if restaurant.city? %}
+        <span itemprop="addressLocality">{{ restaurant.city }}</span>
+      {% endif %}
     </div>
 
-    <div class="contact-item">
-      <p>
-        <span class="contact-item__label">{{ "Horaires :" | t }}</span>
-      </p>
-      <dl class="opening-days">
-        {% for day in opening_hours %}
-          {{ day.meta_microdata }}
-          <dt class="opening-day">
-            {{ day.name }}
-          </dt>
-          <dd class="opening-shifts">
-            {{ day.shifts }}
-          </dd>
-        {% endfor %}
-      </dl>
-      {% if restaurant.opening_hours_information? %}
-        <div class="opening-hours__information">
-          <p>{{ restaurant.opening_hours_information }}</p>
-        </div>
-      {% endif %}
+    <div class="c-aside-info__item">
+      <p class="c-aside-info__label">{{ "Horaires :" | t }}</p>
+      <section class="c-opening-info">
+        <dl class="c-opening-info__days">
+          {% for day in opening_hours %}
+            {{ day.meta_microdata }}
+            <dt class="c-opening-info__day">
+              {{ day.name }}
+            </dt>
+            <dd class="c-opening-info__shifts">
+              {{ day.shifts }}
+            </dd>
+          {% endfor %}
+        </dl>
+        {% if restaurant.opening_hours_information? %}
+          <div class="c-opening-info__precision">
+            <p>{{ restaurant.opening_hours_information }}</p>
+          </div>
+        {% endif %}
+      </section>
     </div>
   </aside>
 
