refactor location component

--- a/templates/index.liquid
+++ b/templates/index.liquid
@@ -122,41 +122,40 @@
     {% endif %}
   </section>
 
-  <section class="directions">
-    <header class="section__header">
-      <h2 class="section__title">{{ "Localisation" | t }}</h2>
-    </header>
-    <div class="section__main">
-      {% if theme_settings.google_map_type != "" %}
-        <div class="map">
-          {% if theme_settings.google_map_type == "embed" %}
-            {% google_map_embed: "size:100%x320" %}
-          {% elsif theme_settings.google_map_type == "image" %}
-            <a class="map__link" href="{% google_map_url %}">
-              <img class="map__image" src="{% google_map_image_url: "size:640x320" %}" />
-            </a>
-          {% endif %}
-        </div>
-      {% endif %}
-      {% if restaurant.street_address? || restaurant.zip_code? || restaurant.city? %}
-      <div class="address">
-        <p>
-          {% if restaurant.street_address? %}
-            {{ restaurant.street_address }}
-            <br />
-          {% endif %}
-          {% if restaurant.zip_code? %} {{ restaurant.zip_code }} {% endif %}
-          {% if restaurant.city? %} <strong>{{ restaurant.city }}</strong> {% endif %}
-        </p>
+  <section class="c-location">
+    <h2 class="c-location__title">{{ "Localisation" | t }}</h2>
+    {% if theme_settings.google_map_type != "" %}
+      <div class="c-location__map">
+        {% if theme_settings.google_map_type == "embed" %}
+          {% google_map_embed: "size:100%x320" %}
+          <div class="c-location__map-overlay js-map-overlay">
+            <p class="c-location__map-activation js-map-activation">{{ "Activer la carte" | t }}</p>
+          </div>
+        {% elsif theme_settings.google_map_type == "image" %}
+          <a class="c-location__map-link" href="{% google_map_url %}">
+            <img class="c-location__map-image" src="{% google_map_image_url: "size:640x320" %}" />
+          </a>
+        {% endif %}
       </div>
-      {% endif %}
+    {% endif %}
+    {% if restaurant.street_address? || restaurant.zip_code? || restaurant.city? %}
+      <div class="c-location__address">
+        {% if restaurant.street_address? %}
+          {{ restaurant.street_address }}
+          <br />
+        {% endif %}
+        {% if restaurant.zip_code? %}
+          {{ restaurant.zip_code }}
+        {% endif %}
+        {% if restaurant.city? %}
+          <strong>{{ restaurant.city }}</strong>
+        {% endif %}
+      </div>
+    {% endif %}
+    <div class="c-location__button">
+      <a class="o-button o-button--red" href="{% google_map_url %}">
+        {{ "Voir l'itinéraire" | t }}
+      </a>
     </div>
-    <footer class="section__footer directions__footer">
-      <p>
-        <a class="o-button o-button--red" href="{% google_map_url %}">
-          {{ "Voir l'itinéraire" | t }}
-        </a>
-      </p>
-    </footer>
   </section>
 </div>
