fix nav sub-items display

--- a/dev/scss/components/_nav.scss
+++ b/dev/scss/components/_nav.scss
@@ -133,7 +133,7 @@
     position: relative;
     right: -0.313em;
   }
-  &:hover > .main-sub-nav__items {
+  &:hover > .c-nav__sub-items {
     display: block;
   }
 }
